--- a/website/newsletter/203/index.mdx
+++ b/website/newsletter/203/index.mdx
@@ -10,9 +10,9 @@ Hi everyone!
 
 This week we have a lot of interesting news and releases!
 
-There's notably an important terminology change for Server Actions, and an exciting preview of upcoming React DevTools v6.
+There's notably an important terminology change for Server Actions, and a preview of upcoming React DevTools v6.
 
-On the React Native side we also have a broad set of very interesting news
+On the React Native side we also have a broad set of interesting news and previews of exciting packages!
 
 Check our partner conf [React Day 🇩🇪 Berlin](https://reactday.berlin/?utm_source=Newsletter&utm_medium=thisweekinreact) (13 & 16 December). Get a 10% discount with our code TWIR.
 
