--- a/website/newsletter/203/index.mdx
+++ b/website/newsletter/203/index.mdx
@@ -14,6 +14,8 @@ There's notably an important terminology change for Server Actions, and a previe
 
 On the React Native side we also have a broad set of interesting news and previews of exciting packages!
 
+Also, my meme game is back. You'll understand at the end 😂
+
 Check our partner conf [React Day 🇩🇪 Berlin](https://reactday.berlin/?utm_source=Newsletter&utm_medium=thisweekinreact) (13 & 16 December). Get a 10% discount with our code TWIR.
 
 <!-- truncate -->
