--- a/website/newsletter/203/index.mdx
+++ b/website/newsletter/203/index.mdx
@@ -155,7 +155,7 @@ With WorkOS you can start selling to enterprises with just a few lines of code.
 ## 🔀 Other {#other}
 
 - 📨 [ECMAScript News - My favorite newsletter to keep up with ES, TC39, JS tooling, and runtimes](https://ecmascript.news/?utm_source=thisweekinreact)
-- 📣 [Announcing VoidZero \- Next Generation Toolchain for JavaScript](https://voidzero.dev/posts/announcing-voidzero-inc): Evan You announced a VC-backed company to support the development of an ambitious super fast JS toolchain involving Vite, Vitest, Rolldown, Oxc. Those projects will remain free under the MIT license.
+- 📣 [Announcing VoidZero \- Next Generation Toolchain for JavaScript](https://voidzero.dev/posts/announcing-voidzero-inc): Evan You announced `void(0)`, a VC-backed company to support the development of an ambitious superfast JS toolchain including Vite, Vitest, Rolldown, Oxc. Those projects will remain free under the MIT license.
 - 👀 [Node.js PR \- unflag require(esm) for v23](https://github.com/nodejs/node/pull/55085): Good news for Node.js CJS/ESM interop. This is planned to be backported in older LTS.
 - 📜 [Web Components Are Not the Future](https://dev.to/ryansolid/web-components-are-not-the-future-48bh): There’s a Web Component drama going on right now and you’ll find many thought leaders giving their opinion.
 - 📜 [What’s the Difference Between HTML’s Dialog Element and Popovers?](https://frontendmasters.com/blog/whats-the-difference-between-htmls-dialog-element-and-popovers/)
@@ -165,6 +165,10 @@ With WorkOS you can start selling to enterprises with just a few lines of code.
 
 ## 🤭 Fun {#fun}
 
-[![alt](/emails/issues/122/meme.jpg)](https://twitter.com/TODOTODOTODOTODOTODOTODOTODOTODOTODOTODO)
+[![alt](/emails/issues/203/meme.jpg)](https://x.com/sebastienlorber/status/1839661750498578602)
+
+[![alt](/emails/issues/203/meme2.jpg)](https://x.com/sebastienlorber/status/1840765064246112276)
+
+[![alt](/emails/issues/203/meme3.jpg)](https://x.com/sebastienlorber/status/1841110004792696850)
 
 See ya! 👋
