--- a/website/newsletter/203/index.mdx
+++ b/website/newsletter/203/index.mdx
@@ -65,7 +65,7 @@ This change clarifies that “use server” is about exposing a server endpoint,
 
 **[React DevTools 6.0](https://github.com/facebook/react/blob/main/packages/react-devtools/CHANGELOG.md#600)**
 
-The React DevTools have been the focus of a lot of work recently, notably the ability to present a unified easy-to-understand React tree for Server and Client components. The browser extensions have not been published, but the v6 changelog is available with many PRs and screenshots to look at. From what I see, the team did an incredible job to provide a great DX around element inspection, profiling, logging, stacktraces, sourcemaps.
+The React DevTools have been the focus of a lot of work recently, notably the ability to present a unified easy-to-understand React tree for Server and Client components. The browser extensions have not been published, but the v6 changelog is available with many PRs and screenshots to look at. From what I see, the team has done an incredible work to provide a great DX around element inspection, profiling, logging, stacktraces, sourcemaps.
 
 ---
 
